Fix Chart.js rendering errors and add robust error handling
- Replace Recharts with Chart.js for better compatibility
- Add comprehensive safety checks for canvas elements
- Implement requestAnimationFrame for proper DOM timing
- Add visibility checks before rendering charts
- Improve error recovery with retry logic
- Add data validation before chart rendering

--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,14 @@ env/
 # Data and logs
 data/raw/*
 data/processed/*
-data/exports/*
+# data/exports/* # Commented out to allow export files to be tracked
 logs/*
 *.log
+
+# Allow specific export files
+!data/exports/*.csv
+!data/exports/*.json
+!data/exports/*.xlsx
 
 # Database
 *.db
